fix(mobile): adjust search modal to dynamic on small screens, biome format

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -223,7 +223,8 @@ article [itemprop="summary"] p {
 
 @media only screen and (max-width: 30em) {
   .user-actions-container {
-    margin: 15px;
+    margin: 10px;
+    gap: 10px;
   }
 }
 
